--- a/release/v1.0.6/docker-compose.yml
+++ b/release/v1.0.6/docker-compose.yml
@@ -1,16 +1,18 @@
 version: "2"
 services:
   blackmamba:
-    image: ${REGISTRY_PREFIX}blackmamba:${TAG}
+    build: ./blackmamba
+    image: essence/crane_blackmamba:1.0
     ports:
-      - "80:80"
+      - "81:80"
     volumes:
       - /etc/localtime:/etc/localtime
     links:
       - crane
     restart: always
   crane_registry:
-    image: ${REGISTRY_PREFIX}registry:${TAG}
+    build: ./registry
+    image: essence/crane_registry:1.0
     ports:
       - "5000:5000"
       - "5001:5001"
@@ -21,19 +23,23 @@ services:
       - /etc/localtime:/etc/localtime
     restart: always
   crane:
-    image: ${REGISTRY_PREFIX}crane:${TAG}
+    build: ./crane
+    image: essence/crane_crane:1.0
     env_file:
       - ./env
     links:
       - crane_registry
       - crane_db
+    environment:
+      - CRANE_SWARM_MANAGER_IP=10.38.210.66
     volumes:
       - /etc/localtime:/etc/localtime
     ports:
       - "5013:5013"
     restart: always
   crane_db:
-    image: ${REGISTRY_PREFIX}mysql:${TAG}
+    build: ./mysql
+    image: essence/crane_mysql:1.0
     environment:
       - MYSQL_ROOT_PASSWORD=111111
     volumes:
