add one_key files

--- a/one_key/blackmamba/Dockerfile
+++ b/one_key/blackmamba/Dockerfile
@@ -1,4 +1,5 @@
 FROM demoregistry.dataman-inc.com/crane/blackmamba:v1.0.6
 MAINTAINER Hplong <peilong.huang@zerone.io>
 
-
+ADD ./frontend/bg-login-02.jpg /usr/share/nginx/html/pics/bg-login-02.jpg
+ADD ./frontend/login.html /usr/share/nginx/html/src/auth/login/login.html
