--- a/one_key/crane/Dockerfile
+++ b/one_key/crane/Dockerfile
@@ -1,4 +1,11 @@
 FROM demoregistry.dataman-inc.com/crane/crane:v1.0.6
+#FROM alpine:3.4
 MAINTAINER Hplong <peilong.huang@zerone.io>
+#RUN pwd
+#ADD ./bin/crane /go/bin/crane
+#ADD ./deploy/registry/private_key.pem /go/bin/private_key.pem
+#RUN pwd
+#WORKDIR /go/bin
+#EXPOSE 5013
 
 ENTRYPOINT ./crane
